3apl interpreter/3aplinterpreter-dev/src/main/generated-sources/cn/edu/nottingham/triaplinterpreter/APLGrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package cn.edu.nottingham.triaplinterpreter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class APLGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, LOAD=2, CBASE=3, BBASE=4, GBASE=5, PBASE=6, PGRULE=7, PRRULE=8, 
		QUOTE=9, SEMI=10, LBRACE=11, RBRACE=12, DOT=13, BARROW=14, COMMA=15, AND=16, 
		OR=17, LPAREN=18, RPAREN=19, SEND=20, JAVA=21, QUESTION=22, IF=23, THEN=24, 
		ELSE=25, WHILE=26, DO=27, SEMICOLON=28, PARROW=29, ORS=30, NOT=31, TRUE=32, 
		IDENT=33, CAPVAR=34, NAMEVAR=35, ALPHA=36, DIGIT=37, WS=38, ALPHANUMERIC=39;
	public static final int
		RULE_program = 0, RULE_capabilities = 1, RULE_capability = 2, RULE_beliefs = 3, 
		RULE_belief = 4, RULE_goals = 5, RULE_goal = 6, RULE_plans = 7, RULE_plan = 8, 
		RULE_basicaction = 9, RULE_plant = 10, RULE_p_rules = 11, RULE_p_rule = 12, 
		RULE_r_rules = 13, RULE_r_rule = 14, RULE_literals = 15, RULE_literal = 16, 
		RULE_wff = 17, RULE_query = 18, RULE_iv = 19, RULE_ident = 20, RULE_var = 21, 
		RULE_atom = 22, RULE_argument = 23, RULE_aatom = 24, RULE_pvarval = 25, 
		RULE_pvar = 26, RULE_pname = 27, RULE_pval = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "capabilities", "capability", "beliefs", "belief", "goals", 
			"goal", "plans", "plan", "basicaction", "plant", "p_rules", "p_rule", 
			"r_rules", "r_rule", "literals", "literal", "wff", "query", "iv", "ident", 
			"var", "atom", "argument", "aatom", "pvarval", "pvar", "pname", "pval"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "'LOAD'", "'CAPABILITIES'", "'BELIEFBASE'", "'GOALBASE'", 
			"'PLANBASE'", "'PG-RULES'", "'PR-RULES'", "'\"'", "':'", "'{'", "'}'", 
			"'.'", "':-'", "','", "'AND'", "'OR'", "'('", "')'", "'SEND'", "'JAVA'", 
			"'?'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "';'", "'<-'", 
			"'|'", "'NOT'", "'TRUE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "LOAD", "CBASE", "BBASE", "GBASE", "PBASE", "PGRULE", 
			"PRRULE", "QUOTE", "SEMI", "LBRACE", "RBRACE", "DOT", "BARROW", "COMMA", 
			"AND", "OR", "LPAREN", "RPAREN", "SEND", "JAVA", "QUESTION", "IF", "THEN", 
			"ELSE", "WHILE", "DO", "SEMICOLON", "PARROW", "ORS", "NOT", "TRUE", "IDENT", 
			"CAPVAR", "NAMEVAR", "ALPHA", "DIGIT", "WS", "ALPHANUMERIC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public APLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(APLGrammarParser.PROGRAM, 0); }
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public TerminalNode CBASE() { return getToken(APLGrammarParser.CBASE, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(APLGrammarParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(APLGrammarParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(APLGrammarParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(APLGrammarParser.RBRACE, i);
		}
		public TerminalNode BBASE() { return getToken(APLGrammarParser.BBASE, 0); }
		public TerminalNode GBASE() { return getToken(APLGrammarParser.GBASE, 0); }
		public TerminalNode PBASE() { return getToken(APLGrammarParser.PBASE, 0); }
		public TerminalNode PGRULE() { return getToken(APLGrammarParser.PGRULE, 0); }
		public TerminalNode PRRULE() { return getToken(APLGrammarParser.PRRULE, 0); }
		public TerminalNode LOAD() { return getToken(APLGrammarParser.LOAD, 0); }
		public CapabilitiesContext capabilities() {
			return getRuleContext(CapabilitiesContext.class,0);
		}
		public BeliefsContext beliefs() {
			return getRuleContext(BeliefsContext.class,0);
		}
		public GoalsContext goals() {
			return getRuleContext(GoalsContext.class,0);
		}
		public PlansContext plans() {
			return getRuleContext(PlansContext.class,0);
		}
		public P_rulesContext p_rules() {
			return getRuleContext(P_rulesContext.class,0);
		}
		public R_rulesContext r_rules() {
			return getRuleContext(R_rulesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(PROGRAM);
			setState(59);
			ident();
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LOAD) {
				{
				setState(60);
				match(LOAD);
				setState(61);
				ident();
				}
			}

			setState(64);
			match(CBASE);
			setState(65);
			match(LBRACE);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(66);
				capabilities();
				}
			}

			setState(69);
			match(RBRACE);
			setState(70);
			match(BBASE);
			setState(71);
			match(LBRACE);
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(72);
				beliefs();
				}
				break;
			}
			setState(75);
			match(RBRACE);
			setState(76);
			match(GBASE);
			setState(77);
			match(LBRACE);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAMEVAR) {
				{
				setState(78);
				goals();
				}
			}

			setState(81);
			match(RBRACE);
			setState(82);
			match(PBASE);
			setState(83);
			match(LBRACE);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(84);
				plans();
				}
			}

			setState(87);
			match(RBRACE);
			setState(88);
			match(PGRULE);
			setState(89);
			match(LBRACE);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARROW || _la==NAMEVAR) {
				{
				setState(90);
				p_rules();
				}
			}

			setState(93);
			match(RBRACE);
			setState(94);
			match(PRRULE);
			setState(95);
			match(LBRACE);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 53765734400L) != 0) {
				{
				setState(96);
				r_rules();
				}
			}

			setState(99);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CapabilitiesContext extends ParserRuleContext {
		public List<CapabilityContext> capability() {
			return getRuleContexts(CapabilityContext.class);
		}
		public CapabilityContext capability(int i) {
			return getRuleContext(CapabilityContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(APLGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(APLGrammarParser.COMMA, i);
		}
		public CapabilitiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capabilities; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterCapabilities(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitCapabilities(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitCapabilities(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CapabilitiesContext capabilities() throws RecognitionException {
		CapabilitiesContext _localctx = new CapabilitiesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_capabilities);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			capability();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(102);
				match(COMMA);
				setState(103);
				capability();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CapabilityContext extends ParserRuleContext {
		public List<TerminalNode> LBRACE() { return getTokens(APLGrammarParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(APLGrammarParser.LBRACE, i);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public List<TerminalNode> RBRACE() { return getTokens(APLGrammarParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(APLGrammarParser.RBRACE, i);
		}
		public AatomContext aatom() {
			return getRuleContext(AatomContext.class,0);
		}
		public LiteralsContext literals() {
			return getRuleContext(LiteralsContext.class,0);
		}
		public CapabilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capability; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterCapability(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitCapability(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitCapability(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CapabilityContext capability() throws RecognitionException {
		CapabilityContext _localctx = new CapabilityContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_capability);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LBRACE);
			setState(110);
			query();
			setState(111);
			match(RBRACE);
			setState(112);
			aatom();
			setState(113);
			match(LBRACE);
			setState(114);
			literals();
			setState(115);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeliefsContext extends ParserRuleContext {
		public List<BeliefContext> belief() {
			return getRuleContexts(BeliefContext.class);
		}
		public BeliefContext belief(int i) {
			return getRuleContext(BeliefContext.class,i);
		}
		public BeliefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beliefs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterBeliefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitBeliefs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitBeliefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeliefsContext beliefs() throws RecognitionException {
		BeliefsContext _localctx = new BeliefsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_beliefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAMEVAR) {
				{
				{
				setState(117);
				belief();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeliefContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public TerminalNode DOT() { return getToken(APLGrammarParser.DOT, 0); }
		public TerminalNode BARROW() { return getToken(APLGrammarParser.BARROW, 0); }
		public LiteralsContext literals() {
			return getRuleContext(LiteralsContext.class,0);
		}
		public BeliefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_belief; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterBelief(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitBelief(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitBelief(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeliefContext belief() throws RecognitionException {
		BeliefContext _localctx = new BeliefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_belief);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				atom();
				setState(124);
				match(DOT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				atom();
				setState(127);
				match(BARROW);
				setState(128);
				literals();
				setState(129);
				match(DOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GoalsContext extends ParserRuleContext {
		public List<GoalContext> goal() {
			return getRuleContexts(GoalContext.class);
		}
		public GoalContext goal(int i) {
			return getRuleContext(GoalContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(APLGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(APLGrammarParser.COMMA, i);
		}
		public GoalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterGoals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitGoals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitGoals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalsContext goals() throws RecognitionException {
		GoalsContext _localctx = new GoalsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_goals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			goal();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(134);
				match(COMMA);
				setState(135);
				goal();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GoalContext extends ParserRuleContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(APLGrammarParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(APLGrammarParser.AND, i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_goal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			atom();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(142);
				match(AND);
				setState(143);
				atom();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlansContext extends ParserRuleContext {
		public List<TerminalNode> LBRACE() { return getTokens(APLGrammarParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(APLGrammarParser.LBRACE, i);
		}
		public List<PlanContext> plan() {
			return getRuleContexts(PlanContext.class);
		}
		public PlanContext plan(int i) {
			return getRuleContext(PlanContext.class,i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(APLGrammarParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(APLGrammarParser.RBRACE, i);
		}
		public PlansContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterPlans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitPlans(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitPlans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlansContext plans() throws RecognitionException {
		PlansContext _localctx = new PlansContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_plans);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(LBRACE);
			setState(150);
			plan();
			setState(151);
			match(RBRACE);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACE) {
				{
				{
				setState(152);
				match(LBRACE);
				setState(153);
				plan();
				setState(154);
				match(RBRACE);
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlanContext extends ParserRuleContext {
		public BasicactionContext basicaction() {
			return getRuleContext(BasicactionContext.class,0);
		}
		public List<PlantContext> plant() {
			return getRuleContexts(PlantContext.class);
		}
		public PlantContext plant(int i) {
			return getRuleContext(PlantContext.class,i);
		}
		public PlanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).enterPlan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof APLGrammarListener ) ((APLGrammarListener)listener).exitPlan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof APLGrammarVisitor ) return ((APLGrammarVisitor<? extends T>)visitor).visitPlan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlanContext plan() throws RecognitionException {
		PlanContext _localctx = new PlanContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_plan);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			basicaction();
			setState(165);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(162);
					plant();
					}
					} 
				}
				setState(167);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
